vlib/v/checker/tests/globals/no_type.out
vlib/v/checker/tests/globals/no_type.vv:1:17: error: bad type syntax
    1 | __global ( test )
      |                 ^
